--- a/portfolio_app/templates/portfolio_app/index.html
+++ b/portfolio_app/templates/portfolio_app/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Computer Science Portfolios</h1>
 
-<h2>More to come from [and your name goes here]</h2>
+<h2>More to come from Brett</h2>
 
 {% endblock %}
 
